# BBA

BBA/: CMakeLists.txt
BBA/src/: argparse.cpp  argparse.hpp  aufgabe0.cpp  aufgabe0.hpp  aufgabe1.cpp  aufgabe1.hpp  aufgabe2.cpp  aufgabe2.hpp  aufgabe3.cpp  aufgabe3.hpp  bbacheck.py  main.cpp  util.cpp  util.hpp
